Add event subscribe in config file

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -207,7 +207,8 @@ seed.node = {
   ip.list = [
     "52.74.218.118:5525",
     "18.138.139.42:5525",
-    "18.140.191.204:5525"
+    "18.140.191.204:5525",
+    "54.169.223.124:5525"
   ]
 }
 
@@ -295,6 +296,7 @@ committee = {
 }
 
 event.subscribe = {
+    enable = false
     native = {
       useNativeQueue = true // if true, use native message queue, else use event plugin.
       bindport = 5555 // bind port
