- refine document - refine wallet-cli

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -196,7 +196,7 @@ node {
   # blockProducedTimeOut = 75
 
   # Limits the maximum number (default 700) of transaction from network layer
-  # netMaxTrxPerSecond = 700
+  # netMaxUnxPerSecond = 700
 }
 
 
@@ -270,10 +270,10 @@ block = {
 }
 
 # Transaction reference block, default is "head", configure to "solid" can avoid TaPos error
-# trx.reference.block = "head" // head;solid;
+# unx.reference.block = "head" // head;solid;
 
 # This property sets the number of milliseconds after the creation of the transaction that is expired, default value is  60000.
-# trx.expiration.timeInMilliseconds = 60000
+# unx.expiration.timeInMilliseconds = 60000
 
 vm = {
   supportConstant = true
