--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,8 @@ task sourceJar(type: Jar, dependsOn: classes) {
 repositories {
     mavenLocal()
     mavenCentral()
-    //maven { url 'https://repo.spring.io/plugins-release' }
+//    maven { url 'https://repo.spring.io/plugins-release' }
+    maven { url 'https://repo.softmotions.com/repository/softmotions-public'}
     maven { url 'https://repo.spring.io/snapshot' }
     
 }
