--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group 'org.unichain'
-version '2.0.3'
+version '2.0.4-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'com.google.protobuf'
