--- a/build.gradle
+++ b/build.gradle
@@ -52,8 +52,7 @@ repositories {
     mavenCentral()
 //    maven { url 'https://repo.spring.io/plugins-release' }
     maven { url 'https://repo.softmotions.com/repository/softmotions-public'}
-    maven { url 'https://repo.spring.io/snapshot' }
-    
+    maven { url 'https://repo.spring.io/release' }
 }
 def versions = [
         checkstyle: '8.7',
