--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group 'org.unichain'
-version '2.0.5-SNAPSHOT'
+version '2.0.5'
 
 apply plugin: 'java'
 apply plugin: 'com.google.protobuf'
