--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Gradle CI
 on:
   push:
     branches: [NativeNFT]
@@ -13,6 +13,6 @@ jobs:
           java-version: 8
           distribution: 'adopt'
       - name: Build Gradle
-        run: ./gradlew clean build
+        run: ./gradlew build
 
 
