--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,8 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
 //    compile "org.projectlombok:lombok:1.16.18"
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+//    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    compileOnly 'org.projectlombok:lombok:1.18.2'
 
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
 
