up jdk ci config

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up jdk 8
+      - name: Set up jdk
         uses: actions/setup-java@v2
         with:
-          java-version: 8
+          java-version: 11
           distribution: 'adopt'
       - name: Build Gradle
         run: ./gradlew clean build
