--- a/build.gradle
+++ b/build.gradle
@@ -96,79 +96,51 @@ task version(type: Exec) {
 }
 
 dependencies {
-    //local libraries
     compile fileTree(dir: 'libs', include: '*.jar')
-    // end local libraries
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
     testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '1.0.0.1'
-
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
-
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-
-//    compile "org.projectlombok:lombok:1.16.18"
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
-
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
-
     compile "com.madgag.spongycastle:core:1.58.0.0"
     compile "com.madgag.spongycastle:prov:1.58.0.0"
 
     compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
-
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.4.0'
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.4.0'
 
     compile "org.iq80.leveldb:leveldb:0.7"
-
     compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.15.10'
-
     compile group: leveldbGroup, name: leveldbName, version: leveldbVersion
-
     compile "org.apache.commons:commons-collections4:4.0"
-
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
-
     compile "com.google.code.findbugs:jsr305:3.0.0"
-
     compile "com.cedarsoftware:java-util:1.8.0"
-
     compile "org.apache.commons:commons-lang3:3.4"
-
     compile group: 'org.springframework', name: 'spring-context', version: '4.2.0.RELEASE'
     compile group: 'org.springframework', name: 'spring-tx', version: '4.2.0.RELEASE'
-
     compile group: 'com.beust', name: 'jcommander', version: '1.72'
-
     compile group: 'junit', name: 'junit', version: '4.12'
-
     compile group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
     compile group: 'org.fusesource.jansi', name: 'jansi', version: '1.16'
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.44'
-
     compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
-
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
     compile group: 'org.apache.commons', name: 'commons-math', version: '2.2'
-
     compile group: 'joda-time', name: 'joda-time', version: '2.3'
-
     compile group: 'io.dropwizard.metrics', name: 'metrics-core', version: '3.1.2'
-
-//    checkstyleConfig "com.puppycrawl.tools:checkstyle:${versions.checkstyle}"
-    // google grpc
     compile group: 'io.grpc', name: 'grpc-netty', version: '1.14.0'
     compile group: 'io.grpc', name: 'grpc-protobuf', version: '1.14.0'
     compile group: 'io.grpc', name: 'grpc-stub', version: '1.14.0'
-    // end google grpc
 
     compile group: 'com.carrotsearch', name: 'java-sizeof', version: '0.0.5'
-
     compile 'org.aspectj:aspectjrt:1.8.13'
     compile 'org.aspectj:aspectjweaver:1.8.13'
     compile 'org.aspectj:aspectjtools:1.8.13'
@@ -179,7 +151,6 @@ dependencies {
     compile 'org.eclipse.jetty:jetty-server:9.4.11.v20180605'
     compile 'org.eclipse.jetty:jetty-servlet:9.4.11.v20180605'
     compile 'org.eclipse.jetty:jetty-servlets:9.4.11.v20180605'
-
     compile 'com.alibaba:fastjson:1.2.60'
     compile group: 'org.apache.httpcomponents', name:'httpasyncclient', version:'4.1.1'
     // end http
@@ -188,27 +159,42 @@ dependencies {
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
     compile group: 'org.zeromq', name: 'jeromq', version: '0.5.0'
 
+    //for plugins
+    compile (group: 'org.apache.commons', name: 'commons-lang3', version: '3.5')
+    compile ("org.mongodb:mongo-java-driver:3.12.10"){
+        exclude group: "org.slf4j"
+    }
+
+    compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.78'
+    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
+    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
+    compileOnly(group: 'org.pf4j', name: 'pf4j', version: "2.5.0") {
+        exclude group: "org.slf4j"
+    }
+    compileOnly group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+
+    compile ("org.apache.kafka:kafka_2.10:0.10.2.2"){
+        exclude group: "org.slf4j"
+    }
+    compile ("org.apache.kafka:kafka-clients:0.10.2.2"){
+        exclude group: "org.slf4j"
+    }
 }
 
 check.dependsOn 'lint'
 
-//checkstyle {
-//    toolVersion = "${versions.checkstyle}"
-//    config = resources.text.fromArchiveEntry(configurations.checkstyleConfig, 'google_checks.xml')
-//
-//}
 checkstyle {
     toolVersion = "${versions.checkstyle}"
     configFile = file("config/checkstyle/checkStyleAll.xml")
 }
-
 
 checkstyleMain {
     source = 'src/main/java'
 }
 
 task lint(type: Checkstyle) {
-    // Cleaning the old log because of the creation of the new ones (not sure if totaly needed)
+    // Cleaning the old log because of the creation of the new ones (not sure if totally needed)
     delete fileTree(dir: "${project.rootDir}/app/build/reports")
     source 'src'
     include '**/*.java'
@@ -219,10 +205,6 @@ task lint(type: Checkstyle) {
     //Failing the build
     ignoreFailures = false
 }
-
-// tasks.matching { it instanceof Test }.all {
-//     testLogging.events = ["failed", "passed", "skipped"]
-// }
 
 if (project.hasProperty("mainClass")) {
     mainClassName = mainClass
