add even triggers

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -297,6 +297,9 @@ committee = {
 
 event.subscribe = {
     enable = false
+    mongodb = false
+    kafka = false
+
     native = {
       useNativeQueue = true // if true, use native message queue, else use event plugin.
       bindport = 5555 // bind port
@@ -310,23 +313,38 @@ event.subscribe = {
     topics = [
         {
           triggerName = "block" // block trigger, the value can't be modified
-          enable = false
+          enable = true
           topic = "block" // plugin topic, the value could be modified
         },
         {
           triggerName = "transaction"
-          enable = false
+          enable = true
           topic = "transaction"
         },
         {
           triggerName = "contractevent"
-          enable = false
+          enable = true
           topic = "contractevent"
         },
         {
           triggerName = "contractlog"
-          enable = false
+          enable = true
           topic = "contractlog"
+        },
+        {
+          triggerName = "solidity" // solidity block event trigger
+          enable = true
+          topic = "solidity"
+        },
+        {
+          triggerName = "solidityevent"
+          enable = true
+          topic = "solidityevent"
+        },
+        {
+          triggerName = "soliditylog"
+          enable = true
+          topic = "soliditylog"
         }
     ]
 
