add eventsub config guide

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -308,7 +308,7 @@ event.subscribe = {
 
     path = "" // absolute path of plugin
     server = "" // target server address to receive event triggers
-    dbconfig="" // dbname|username|password
+    dbconfig="" // dbname|username|password|version{1|2}
     contractParse = true,
     topics = [
         {
