implement posbridge actuators

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -327,6 +327,11 @@ event.subscribe = {
           topic = "contractevent"
         },
         {
+          triggerName = "nativeevent"
+          enable = true
+          topic = "nativeevent"
+        },
+        {
           triggerName = "contractlog"
           enable = true
           topic = "contractlog"
