--- a/build.gradle
+++ b/build.gradle
@@ -165,6 +165,9 @@ dependencies {
         exclude group: "org.slf4j"
     }
 
+    //web3j
+    compile (group: 'org.web3j', name: 'core', version: '3.3.1')
+
     compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.78'
     compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
     compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
